--- a/src/Components/animations.css
+++ b/src/Components/animations.css
@@ -31,3 +31,6 @@
     0%{transform: scale(0.8)}
     100%{transform: scale(1)}
 }
+
+.treb{font-family: 'helvetica', sans-serif;}
+.darks{color: rgb(107, 107, 107);}
