--- a/src/Components/cust.css
+++ b/src/Components/cust.css
@@ -26,6 +26,7 @@
   position: fixed;
   bottom: 30px;
   right: 60px;
+  z-index: 5;
 }
 
 .bot a{
@@ -74,4 +75,65 @@
 }
 .liststyle{
   list-style-type: circle;
+}
+.num{
+  position: absolute;
+  font-size: 14px;
+  top: -5px;
+  left: 0;
+  background-color: #E72F8B;
+  padding: 0px;
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  border-radius: 50%;
+  color: white;
+}
+
+.rl{border-radius: 5px 0 0 5px;}
+.rr{border-radius: 0 5px 5px 0;}
+.inpplc{width: 10%;text-align: center;}
+.inpplc::placeholder{color: white}
+
+.slide-in-text {
+  animation: slideInText 1.5s ease-in-out forwards;
+}
+
+@keyframes slideInText {
+  0% {
+    transform: translateY(-0.3em);
+    opacity: 0.2;
+  }
+  
+  40% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+.cartItem{
+  animation: slideInText 0.5s ease-in-out forwards;
+}
+@keyframes cartItemAnim {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+.bot {
+  transition: transform 0.3s ease-in-out;
+}
+
+.bot.scaled {
+  transform: scale(1.2);
 }
