Semi final commit

--- a/src/Components/cust.css
+++ b/src/Components/cust.css
@@ -22,22 +22,6 @@
   font-style: normal;
 }
 
-.bot{
-  position: fixed;
-  bottom: 30px;
-  right: 60px;
-  z-index: 5;
-}
-
-.bot a{
-  border: none;
-  color: black;
-  background-color: white;
-  border-radius: 50%;
-  font-size: 35px;
-  padding: 10px 13px;
-}
-
 .button-wh-pink{
   padding: 10px 35px;
   border: 1px solid white;
@@ -56,12 +40,12 @@
 }
 .button-pink-wh{
   padding: 10px 45px;
-  border: 1px solid #E72F8B;
+  border: 1px solid #ffffff;
   background-color: #E72F8B;
   color: white;
   border-radius: 13px;
   transition: 0.3s;
-  font-size: 19px;
+  /* font-size: 19px; */
   letter-spacing: 2px;
   font-weight: bold;
   text-decoration: none;
@@ -69,6 +53,15 @@
 .button-pink-wh:hover{
   border: 5px solid white;
   transform: scale(1.1);
+}
+
+.activated{
+  background-color: #E72F8B;
+  border: none;
+}
+.activated:hover{
+  border: none;
+  transform: scale(1);
 }
 .lett{
   letter-spacing: 2px;
@@ -90,10 +83,32 @@
   color: white;
 }
 
+.pink{color: #E72F8B;}
+
+.leftin{
+  border-right: 0;
+  border-radius: 5px 0 0 5px;
+}
+.rightbtn{
+  border-right: 1px solid rgb(220, 220, 220);
+  border-top: 1px solid rgb(220, 220, 220);
+  border-bottom: 1px solid rgb(220, 220, 220);
+  border-radius: 0 5px 5px 0;
+
+}
+
+.rightbtn:hover{
+  border-right: 1px solid rgb(220, 220, 220);
+  border-top: 1px solid rgb(220, 220, 220);
+  border-bottom: 1px solid rgb(220, 220, 220);
+}
+
 .rl{border-radius: 5px 0 0 5px;}
 .rr{border-radius: 0 5px 5px 0;}
 .inpplc{width: 10%;text-align: center;}
 .inpplc::placeholder{color: white}
+
+.marmin{margin-top: -15px}
 
 .slide-in-text {
   animation: slideInText 1.5s ease-in-out forwards;
@@ -130,6 +145,12 @@
   }
 }
 
+.mini{margin-right: 5px;}
+.stroke{
+  /* -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: black; */
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
 .bot {
   transition: transform 0.3s ease-in-out;
 }
