--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,15 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Neucha&family=Sofia+Sans+Condensed:ital@0;1&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300;400;700&display=swap');
 
 
 :root {
     --par-font-family: "Neucha", cursive;
-                                                
+    --shan-font-family: 'Shantell Sans', cursive;                                
 }
 
 .markf{font-family: 'Marker Felt', sans-serif;}
 .lhgh{
     line-height: 30px;
+}
+.lightt{
+    font-weight: 300;
 }
 
 .par-font-fam {
@@ -19,38 +22,7 @@
 body {
     overflow-x: hidden;
     background-color: #171717;
-    font-family: var(--par-font-family);
-}
-
-.headerclass {
-    background-color: #000000;
-    height: 100vh;
-}
-
-.headerback {
-    position: relative;
-    background-image: url("./images/bubble.v03.png");
-    background-size: 100% 100%;
-    font-family: var(--mark-font-family);
-    height: 100vh;
-    width: 100vw;
-}
-
-.headBubble {
-    height: 100vh;
-    width: 100vw;
-}
-
-.navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 5;
-    transition: 0.2s;
-}
-.scrolled{
-    background-color: #171717;
-    border-bottom: 1px solid rgb(155, 155, 155);
+    font-family: var(--shan-font-family);
 }
 
 .buttonBuy {
@@ -68,42 +40,6 @@ body {
     border-radius: 10px;
 }
 
-.upper {
-    position: relative;
-    margin-top: -5em;
-    z-index: 3;
-}
-
-.cardsbox {
-    position: absolute;
-    height: 450px;
-    z-index: 3;
-    top: 22%;
-    left: 40vw;
-    animation: cardsBox 1.3s ease-in-out forwards;
-}
-.starss {
-    position: absolute;
-    height: 700px;
-    z-index: 3;
-    top: 2%;
-    left: 7.5vw;
-    animation: puffs 0.7s ease-in-out forwards;
-}
-
-.cardsleft {
-    position: absolute;
-    height: 350px;
-    z-index: 0;
-    animation: cardsLeftAnim 1.3s ease-in-out forwards;
-}
-
-.cardsright {
-    position: absolute;
-    height: 350px;
-    z-index: 0;
-    animation: cardsRightAnim 1.3s ease-in-out forwards;
-}
 
 .pickbtn {
     border-radius: 50%;
@@ -114,12 +50,6 @@ body {
     margin: 0 5px;
 }
 
-.opt-in-bal {
-    background-image: url("./images/bubbleOpt.png");
-    background-size: 100% 100%;
-    width: 100%;
-    padding: 250px 350px;
-}
 .fm-l{
     font-size: 20px;
 }
@@ -128,7 +58,6 @@ body {
     .font-large{font-size: larger;}
     .font-lm{font-size: 21.5px}
     .font-sm{font-size: 12px}
-    .widthsm{width: 270px; margin-left: 4.5em}
     .pdr{padding-left: 6em;}
     .toright{
         margin-right: 5em;
@@ -137,7 +66,10 @@ body {
 }
 
 .accordion-button::after{
-   background-image: url("./images/maca.new.png");
+   background-image: url("./images/arrow.png");
+}
+.accordion-button:not(.collapsed)::after{
+    background-image: var("./images/arrow.png");
 }
 
 .navbar-branda {
