--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -9,10 +9,18 @@
     }
     .starss {
         position: absolute;
-        height: 700px;
+        height: 100vh;
+        width: 100vw;
         z-index: 3;
-        top: 2%;
-        left: 7.5vw;
+        top: 5%;
+        animation: puffs 0.7s ease-in-out forwards;
+    }
+    .puffs {
+        position: absolute;
+        height: 750px;
+        z-index: 3;
+        top: 10%;
+        left: 10vw;
         animation: puffs 0.7s ease-in-out forwards;
     }
 
@@ -43,8 +51,120 @@
 
     .headerback {
         position: relative;
-        background-image: url("./images/bubble.v03.png");
+        background-image: url("./images/bubble6.png");
         background-size: 100% 100%;
+        font-family: var(--mark-font-family);
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .headBubble {
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .navbar {
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        z-index: 5;
+        transition: 0.2s;
+    }
+    .scrolled {
+        background-color: #171717;
+        border-bottom: 1px solid rgb(155, 155, 155);
+    }
+
+    .carimg {
+        height: 75vh;
+        width: 90vw;
+        text-align: center;
+        border-radius: 30px;
+    }
+
+    .opt-in-bal {
+        background-image: url("./images/cloud.png");
+        background-size: 100% 100%;
+        text-align: center;
+        justify-content: center;
+        width: 100vw;
+        height: 60vw;
+        padding: 250px;
+    }
+    .bot {
+        position: fixed;
+        bottom: 30px;
+        right: 60px;
+        z-index: 5;
+    }
+
+    .bot a {
+        border: none;
+        color: black;
+        background-color: white;
+        border-radius: 50%;
+        font-size: 35px;
+        padding: 10px 13px;
+        box-shadow: 0px 0px 20px 1px rgb(92, 92, 92);
+    }
+    
+}
+
+@media (max-width: 1600px) {
+    .cardsbox {
+        position: absolute;
+        height: 450px;
+        z-index: 3;
+        top: 25%;
+        left: 40vw;
+        animation: cardsBox 1.3s ease-in-out forwards;
+    }
+    .starss {
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        z-index: 2;
+        top: 3%;
+        animation: stars 3s ease-in-out infinite;
+    }
+    .puffs {
+        position: absolute;
+        height: 750px;
+        z-index: 2;
+        top: 9%;
+        left: 11vw;
+        animation: puffs 0.7s ease-in-out forwards;
+    }
+
+    .cardsleft {
+        position: absolute;
+        height: 450px;
+        z-index: 0;
+        animation: cardsLeftAnim 1.3s ease-in-out forwards;
+    }
+
+    .cardsright {
+        position: absolute;
+        height: 430px;
+        z-index: 0;
+        animation: cardsRightAnim 1.3s ease-in-out forwards;
+    }
+
+    .upper {
+        position: relative;
+        margin-top: -5em;
+        z-index: 3;
+    }
+
+    .headerclass {
+        background-color: #000000;
+        height: 100vh;
+    }
+
+    .headerback {
+        position: relative;
+        background-image: url("./images/bubble6.png");
+        background-size: 100% 105%;
         font-family: var(--mark-font-family);
         height: 100vh;
         width: 100vw;
