--- a/src/Components/cust.css
+++ b/src/Components/cust.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 @font-face {
   font-family: 'Marker Felt';
@@ -22,6 +23,15 @@
       url('./fonts/MarkerFelt-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
+}
+
+.shantell {
+  font-family: "Shantell Sans", cursive;
+  font-optical-sizing: auto;
+  font-variation-settings:
+    "BNCE" 0,
+    "INFM" 0,
+    "SPAC" 0;
 }
 
 .roboto{
@@ -60,6 +70,24 @@
 .button-pink-wh:hover{
   border: 5px solid white;
   transform: scale(1.1);
+}
+
+.button-order{
+  padding: 10px 35px;
+  border: 1px solid white;
+  background-color: #191819;
+  color: white;
+  border-radius: 8px;
+  transition: 0.3s;
+  font-size: 19px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.button-order:hover{
+  border: 1px solid #E72F8B;
+  background-color: #E72F8B;
 }
 
 .activated{
@@ -115,7 +143,7 @@
 
 .rl{border-radius: 5px 0 0 5px;}
 .rr{border-radius: 0 5px 5px 0;}
-.inpplc{width: 10%;text-align: center;}
+.inpplc{width: 14%;text-align: center;}
 .inpplc::placeholder{color: white}
 
 .marmin{margin-top: -15px}
@@ -178,8 +206,8 @@
 }
 
 .video{
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 .br{
@@ -190,6 +218,7 @@
   border: 2px solid #E72F8B;
   background-color: #E72F8B;
   color: white;
+  font-size: larger;
   margin: 10px 0 20px 0;
   padding: 10px 20px;
 }
