--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,3 +1,136 @@
+@media (min-width: 2001px) {
+    .cardsbox {
+        position: absolute;
+        height: 450px;
+        z-index: 3;
+        top: 22%;
+        left: 40vw;
+        animation: cardsBox 1.3s ease-in-out forwards;
+    }
+    .starss {
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        z-index: 3;
+        top: 5%;
+        animation: puffs 0.7s ease-in-out forwards;
+    }
+    .puffs {
+        position: absolute;
+        height: 750px;
+        z-index: 3;
+        top: 10%;
+        left: 10vw;
+        animation: puffs 0.7s ease-in-out forwards;
+    }
+
+    .cardsleft {
+        position: absolute;
+        height: 350px;
+        z-index: 0;
+        animation: cardsLeftAnim 1.3s ease-in-out forwards;
+    }
+
+    .cardsright {
+        position: absolute;
+        height: 350px;
+        z-index: 0;
+        animation: cardsRightAnim 1.3s ease-in-out forwards;
+    }
+
+    .upper {
+        position: relative;
+        margin-top: -5em;
+        z-index: 3;
+    }
+
+    .headerclass {
+        background-color: #000000;
+        height: 100vh;
+    }
+
+    .headerback {
+        position: relative;
+        background-color: #191919;
+        font-family: var(--mark-font-family);
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .headBubble {
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .navbar {
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        z-index: 5;
+        transition: 0.2s;
+    }
+    .scrolled {
+        background-color: #171717;
+        border-bottom: 1px solid rgb(155, 155, 155);
+    }
+
+    .carimg {
+        height: 80vh;
+        width: 80vw;
+        text-align: center;
+        border-radius: 30px;
+    }
+
+    .opt-in-bal {
+        background-image: url("./images/email bubble2.png");
+        background-size: 100% 100%;
+        text-align: center;
+        justify-content: center;
+        width: 100vw;
+        height: 60vw;
+        padding: 330px;
+    }
+    .bot {
+        position: fixed;
+        bottom: 30px;
+        right: 60px;
+        z-index: 9999;
+    }
+
+    .bot a {
+        border: none;
+        color: black;
+        background-color: white;
+        border-radius: 50%;
+        font-size: 35px;
+        padding: 10px 13px;
+        box-shadow: 0px 0px 13px 0.5px rgb(92, 92, 92);
+    }
+    .orderForm {
+        display: none;
+        position: fixed;
+        background-color: #1a1a1a;
+        background-image: url('images/stars2.6.png');
+        background-size: 105% 115%;
+        border: 1px solid white;
+        border-radius: 20px;
+        top: -10%;
+        left: 7vw;
+        z-index: 7;
+        transform: scale(0.85);
+
+    }
+    .display{
+        display: none;
+    }
+    #videoback{
+        display: block;
+    }
+    .textresp{
+        margin: auto 120px;
+    }
+}
+
 @media (max-width: 2000px) {
     .cardsbox {
         position: absolute;
